--- a/styles/body.css
+++ b/styles/body.css
@@ -175,3 +175,95 @@ a {
     font-weight: 600;
     opacity: 0.5;
 }
+
+.features {
+    background: #FFFFFF;
+    padding: 115px 60px;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+
+}
+
+.card__logo {
+    border: 1px solid rgba(0, 0, 0, .5);
+    padding: 15px;
+    border-radius: 15px;
+    width: 20%;
+}
+
+.card__logo img {
+    height: 100px;
+    width: 100px;
+}
+
+.cards__border {
+    margin-top: 50px;
+    border: 1px solid rgba(0, 0, 0, .5);
+}
+
+.feedback {
+    display: flex;
+    flex-direction: row;
+}
+
+.feedback__review {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.feedback__review h1 {
+    font-size: 42px;
+}
+
+.feedback__review p {
+    font-size: 18px;
+}
+
+.feedback__cards {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.feedback__cards_rating {
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    background: #213053;
+    border-radius: 15px;
+    color: white;
+}
+
+.feedback__cards_rating h1 {
+    font-size: 42px;
+}
+
+.feedback__cards_economy {
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    background: #dc5e26;
+    border-radius: 15px;
+    color: white;
+}
+
+.feedback__cards_economy h1 {
+    font-size: 42px;
+}
+
+.feedback__cards_economy p {
+    font-size: 18px;
+    margin-bottom: 25px;
+}
+
+.feedback__cards_rating p {
+    font-size: 18px;
+    margin-bottom: 25px;
+}
